--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,3 +15,16 @@
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+.navbar-default{
+  background-color: #3cf;
+  .navbar-brand {
+    color: #fff;
+  }
+  .navbar-nav > li > a {
+    color: #fff;
+  }
+  button.navbar-toggle.collapsed{
+    background-color:#fff;
+  }
+}
